--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,15 +14,18 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-toast": "^1.2.11",
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
