--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web32",
+  "name": "Amply",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -18,6 +18,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "Amply": "file:",
     "web32": "file:"
   }
 }
