--- a/apps/backend/ev_charging/Anchor.toml
+++ b/apps/backend/ev_charging/Anchor.toml
@@ -6,7 +6,7 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-ev_charging = "5hrjD5aKbAtgsj7ihucfc4HtxVigaJPhxTcCN7UQRLCE"
+ev_charging = "5FyPMX3L9MZCgfBmrC42RmKv6qzs91e8KFtF2MHTJqbZ"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,5 +16,5 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "pnpm run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
-# test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
+# test = "pnpm run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+ test = "mocha --require ts-node/register --timeout 1000000 --recursive tests/**/*.ts"
