--- a/apps/backend/ev_charging/package.json
+++ b/apps/backend/ev_charging/package.json
@@ -7,16 +7,21 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
-    "@project-serum/anchor": "^0.26.0"
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/web3.js": "^1.98.2",
+    "bn.js": "^5.2.2",
+    "borsh": "^2.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.1",
     "chai": "^4.3.4",
+    "dotenv": "^16.5.0",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
