--- a/apps/backend/ev_charging/Anchor.toml
+++ b/apps/backend/ev_charging/Anchor.toml
@@ -6,7 +6,11 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-ev_charging = "CbhmEH9wJTGShWpyHebvj15DXFJu7TkMK7pXydc9qoQ1"
+ev_charging = "Fp3LQifUv4BJ5KrpUb1fpWA9Krs9ryNHagFW9H8bVUDP"
+
+[workspace]
+types = "apps/backend/ev_charging/target/types"
+
 
 [registry]
 url = "https://api.apr.dev"
