--- a/apps/backend/ev_charging/programs/ev_charging/Cargo.toml
+++ b/apps/backend/ev_charging/programs/ev_charging/Cargo.toml
@@ -18,6 +18,7 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
 # solana-program = "2.2.1"
 # solana-address-lookup-table-interface = "2.2.2"
 # solana-pubkey = "2.2.1"
