--- a/apps/backend/ev_charging/package.json
+++ b/apps/backend/ev_charging/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@project-serum/anchor": "^0.26.0",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "bn.js": "^5.2.2",
     "borsh": "^2.0.0"
