--- a/apps/backend/ev_charging/programs/ev_charging/Cargo.toml
+++ b/apps/backend/ev_charging/programs/ev_charging/Cargo.toml
@@ -17,8 +17,6 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.31.1"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
-# solana-program = "2.2.1"
-# solana-address-lookup-table-interface = "2.2.2"
-# solana-pubkey = "2.2.1"
+
