--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -1,2 +1,4 @@
 CIVIC_AUTH_CLIENT_ID = "your civic client Id"
 GEMINI_API_KEY = "your gemini api key"
+NEXT_PUBLIC_MAPPLES_CLIENT_API = "Mappls client id"
+NEXT_PUBLIC_MAPPLES_CLIENT_SECRET = "mappls client secret"
